added minor markdown

--- a/openapi_classifier.ipynb
+++ b/openapi_classifier.ipynb
@@ -55,7 +55,7 @@
         "!apt-get update -qq 2>&1 > /dev/null\n",
         "!apt-get -y install -qq google-drive-ocamlfuse fuse"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "vcode = getpass.getpass()\n",
         "!echo {vcode} | google-drive-ocamlfuse -headless -id={creds.client_id} -secret={creds.client_secret}"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +296,7 @@
       "source": [
         "!ls /content/drive/openapi-data/"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
         "!pip install -q keras\n",
         "import keras"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
         "import tensorflow as tf\n",
         "tf.test.gpu_device_name()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
         "!apt-get -qq install -y libarchive-dev && pip install -q -U libarchive\n",
         "import libarchive"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +499,7 @@
       "source": [
         "training_data[keys[0]]"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +626,7 @@
         "labelsS.shape\n",
         "\n"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +656,7 @@
       "source": [
         "labelsS"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +716,7 @@
         "\n",
         "#labelsStruct = labelsS[\"cluster\"].tolist()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +743,7 @@
         "print(labelsPath)\n",
         "print(labelsStruct)"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +801,7 @@
         "  \n",
         "  "
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
       "source": [
         "specs_json[1]"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,6 +868,24 @@
     },
     {
       "metadata": {
+        "id": "u1C6_30s9H3F",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Once fit, the Tokenizer provides 4 attributes that you can use to query what has been learned about your documents:\n",
+        "\n",
+        "*   word_counts: A dictionary of words and their counts.\n",
+        "*   word_docs: A dictionary of words and how many documents each appeared in.\n",
+        "*   word_index: A dictionary of words and their uniquely assigned integers.\n",
+        "*   document_count:An integer count of the total number of documents that were used to fit the Tokenizer.\n",
+        "\n",
+        "\n",
+        "[source](https://machinelearningmastery.com/prepare-text-data-deep-learning-keras/)\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "kUGDglE0qLI_",
         "colab_type": "code",
         "colab": {}
@@ -901,7 +919,7 @@
       "source": [
         "print(sequences[0])"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +986,7 @@
         "indexkeys = list(tokenizer.word_index.keys())\n",
         "print(indexkeys[0:100])"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1006,7 +1024,7 @@
       "source": [
         "len(sequences_padded[3])"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
