Add model training adjust size of vectors

--- a/openapi_classifier.ipynb
+++ b/openapi_classifier.ipynb
@@ -1006,7 +1006,7 @@
       },
       "cell_type": "code",
       "source": [
-        "tokenizer = Tokenizer(num_words=20000,filters='!\"#$%&()*+,-/:;<=>?@[\\\\]^_`{|}~\\t\\n')\n",
+        "tokenizer = Tokenizer(num_words=2500,filters='!\"#$%&()*+,-/:;<=>?@[\\\\]^_`{|}~\\t\\n')\n",
         "\n",
         "tokenizer\n",
         "\n",
@@ -1027,19 +1027,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "cbc5b4e6-0737-4697-c8b6-8740717165e2"
+        "outputId": "47d88521-a184-434b-e694-87a0eb35607c"
       },
       "cell_type": "code",
       "source": [
         "print(sequences[0])\n",
         "print(len(sequences))"
       ],
-      "execution_count": 30,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[420, 370, 488, 42, 112, 501, 1248, 4020, 340, 476, 193, 476, 7, 86, 112, 2, 3313, 26, 75, 26, 8370, 4020, 92, 3912, 635, 63, 8887, 19, 889, 504, 5663, 19, 382, 2623, 86, 42, 932, 282, 329, 382, 112, 7215, 19, 407, 32, 420, 86, 112, 63, 370, 19, 783, 16, 19, 862, 200, 60, 73, 800, 4020, 46, 2, 46, 4020, 755, 2, 1047, 705, 103, 86, 112, 75, 47, 34, 39, 2, 8, 49, 6, 4020, 94, 46, 4020, 15, 80, 14868, 51, 3912, 4020, 14868, 46, 2, 4369, 49, 755, 2, 1047, 705, 103, 86, 112, 75, 47, 34, 39, 2, 8, 49, 6, 14868, 20, 71, 44, 3, 5, 3, 53, 94, 46, 8, 49, 6, 14868, 15, 95, 441, 550, 2527, 67, 4020, 51, 3912, 4020]\n",
+            "[420, 370, 488, 42, 112, 501, 1248, 340, 476, 193, 476, 7, 86, 112, 2, 26, 75, 26, 92, 635, 63, 19, 889, 504, 19, 382, 86, 42, 932, 282, 329, 382, 112, 19, 407, 32, 420, 86, 112, 63, 370, 19, 783, 16, 19, 862, 200, 60, 73, 800, 46, 2, 46, 755, 2, 1047, 705, 103, 86, 112, 75, 47, 34, 39, 2, 8, 49, 6, 94, 46, 15, 80, 51, 46, 2, 49, 755, 2, 1047, 705, 103, 86, 112, 75, 47, 34, 39, 2, 8, 49, 6, 20, 71, 44, 3, 5, 3, 53, 94, 46, 8, 49, 6, 15, 95, 441, 550, 67, 51]\n",
             "1016\n"
           ],
           "name": "stdout"
@@ -1095,14 +1095,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "0085cd02-e2a4-4429-8500-8b2a3dde3ce1"
+        "outputId": "21907302-19e7-409e-b43f-f69f8c11d1c9"
       },
       "cell_type": "code",
       "source": [
         "indexkeys = list(tokenizer.word_index.keys())\n",
         "print(indexkeys[0:100])"
       ],
-      "execution_count": 35,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -1121,7 +1121,7 @@
       },
       "cell_type": "code",
       "source": [
-        "sequences_padded = pad_sequences(sequences)"
+        "sequences_padded = pad_sequences(sequences, maxlen=25000)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1134,25 +1134,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0d47ce2d-33da-4141-e061-7fd75a6e6d92"
+        "outputId": "ab0a7b5d-d502-4978-96cb-91c949fa7734"
       },
       "cell_type": "code",
       "source": [
         "len(sequences_padded[3])"
       ],
-      "execution_count": 37,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "378739"
+              "25000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 82
         }
       ]
     },
@@ -1188,14 +1188,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "766f6ae4-2750-4187-84d4-023500205c00"
+        "outputId": "9baa5348-b43c-4c8f-ffde-33caee64aabc"
       },
       "cell_type": "code",
       "source": [
         "print(len(X_train))\n",
         "print(len(X_test))"
       ],
-      "execution_count": 52,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,14 +1215,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "d9e61460-bbb8-41d0-dba1-40c152df913c"
+        "outputId": "7774cfb1-6be2-415f-a120-743427f53578"
       },
       "cell_type": "code",
       "source": [
         "print(X_train[-1])\n",
         "print(X_test[0])"
       ],
-      "execution_count": 53,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,20 +1291,36 @@
       "metadata": {
         "id": "Jd7dTA9vASip",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "outputId": "d0e748a1-aae3-4fc2-cf61-e1469e1bccae"
       },
       "cell_type": "code",
       "source": [
         "model = Sequential()\n",
-        "model.add(Embedding(20000, 128, input_length=378739))\n",
+        "model.add(Embedding(20000, 128, input_length=25000))\n",
         "model.add(LSTM(128, dropout=0.2, recurrent_dropout=0.2))\n",
-        "model.add(Dense(6, activation='softmax'))\n",
+        "model.add(Dense(1, activation='softmax'))\n",
         "model.compile(optimizer='rmsprop',\n",
-        "              loss='categorical_crossentropy',\n",
+        "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-e124fe8e433a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_length\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m25000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdropout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecurrent_dropout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'softmax'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m model.compile(optimizer='rmsprop',\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Sequential' is not defined"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -1314,13 +1330,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 255
         },
-        "outputId": "74cef42b-d5b4-4d3a-9ac9-5530b86fd399"
+        "outputId": "b33e32bf-8c06-4406-ddcc-b637fb62e33e"
       },
       "cell_type": "code",
       "source": [
         "print(model.summary())"
       ],
-      "execution_count": 57,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -1328,19 +1344,71 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_1 (Embedding)      (None, 378739, 128)       2560000   \n",
+            "embedding_4 (Embedding)      (None, 25000, 128)        2560000   \n",
             "_________________________________________________________________\n",
-            "lstm_1 (LSTM)                (None, 128)               131584    \n",
+            "lstm_4 (LSTM)                (None, 128)               131584    \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 6)                 774       \n",
+            "dense_4 (Dense)              (None, 1)                 129       \n",
             "=================================================================\n",
-            "Total params: 2,692,358\n",
-            "Trainable params: 2,692,358\n",
+            "Total params: 2,691,713\n",
+            "Trainable params: 2,691,713\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "None\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "V8Yt5meuCIpu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "vzUDM9CDCJRT",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### first training"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "5ZSkgjpJCLTG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "1ca81967-74d8-49ef-d016-47951949b55d"
+      },
+      "cell_type": "code",
+      "source": [
+        "model.fit(X_train, np.array(Y_Struct_train), validation_split=0.2, epochs=3)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-5c7e8400d3ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_Struct_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_split\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          ]
         }
       ]
     }
