added code for eval

--- a/openapi_classifier.ipynb
+++ b/openapi_classifier.ipynb
@@ -1250,7 +1250,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "d2cd60ae-e74e-4d3d-a945-a08b35be868c"
+        "outputId": "ada0ae55-8fae-4c55-e9b1-eb2aa3c24957"
       },
       "cell_type": "code",
       "source": [
@@ -1260,18 +1260,18 @@
         "                    verbose=1,\n",
         "                    validation_split=0.2)"
       ],
-      "execution_count": 120,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 812 samples, validate on 204 samples\n",
+            "Train on 646 samples, validate on 162 samples\n",
             "Epoch 1/3\n",
-            "812/812 [==============================] - 1770s 2s/step - loss: 1.6656 - acc: 0.3633 - val_loss: 2.4492 - val_acc: 0.0196\n",
+            "646/646 [==============================] - 150s 233ms/step - loss: 1.5604 - acc: 0.4381 - val_loss: 3.1695 - val_acc: 0.0123\n",
             "Epoch 2/3\n",
-            "812/812 [==============================] - 1770s 2s/step - loss: 1.6330 - acc: 0.3781 - val_loss: 2.2805 - val_acc: 0.0196\n",
+            "646/646 [==============================] - 147s 227ms/step - loss: 1.4530 - acc: 0.4721 - val_loss: 3.4883 - val_acc: 0.0123\n",
             "Epoch 3/3\n",
-            "812/812 [==============================] - 1784s 2s/step - loss: 1.6185 - acc: 0.3781 - val_loss: 2.2148 - val_acc: 0.0196\n"
+            "646/646 [==============================] - 148s 230ms/step - loss: 1.4190 - acc: 0.4721 - val_loss: 2.9588 - val_acc: 0.0123\n"
           ],
           "name": "stdout"
         }
@@ -1300,7 +1300,6 @@
         "model2.add(Dropout(0.2))\n",
         "model2.add(Dense(512))\n",
         "model2.add(Activation('relu'))\n",
-        "model2.add(Dropout(0.2))\n",
         "model2.add(Dense(6))\n",
         "model2.add(Activation('softmax'))\n",
         "\n",
@@ -1317,15 +1316,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 731
+          "height": 697
         },
-        "outputId": "4d219697-6d89-4d6c-8229-ac90c33acb7d"
+        "outputId": "ca6f5b92-1c71-453d-cf3e-4c748fa6f673"
       },
       "cell_type": "code",
       "source": [
         "print(model2.summary())"
       ],
-      "execution_count": 170,
+      "execution_count": 190,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,39 +1332,37 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "dense_50 (Dense)             (None, 512)               5120512   \n",
+            "dense_62 (Dense)             (None, 512)               5120512   \n",
             "_________________________________________________________________\n",
-            "activation_47 (Activation)   (None, 512)               0         \n",
+            "activation_59 (Activation)   (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dropout_41 (Dropout)         (None, 512)               0         \n",
+            "dropout_53 (Dropout)         (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_51 (Dense)             (None, 512)               262656    \n",
+            "dense_63 (Dense)             (None, 512)               262656    \n",
             "_________________________________________________________________\n",
-            "activation_48 (Activation)   (None, 512)               0         \n",
+            "activation_60 (Activation)   (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dropout_42 (Dropout)         (None, 512)               0         \n",
+            "dropout_54 (Dropout)         (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_52 (Dense)             (None, 512)               262656    \n",
+            "dense_64 (Dense)             (None, 512)               262656    \n",
             "_________________________________________________________________\n",
-            "activation_49 (Activation)   (None, 512)               0         \n",
+            "activation_61 (Activation)   (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dropout_43 (Dropout)         (None, 512)               0         \n",
+            "dropout_55 (Dropout)         (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_53 (Dense)             (None, 512)               262656    \n",
+            "dense_65 (Dense)             (None, 512)               262656    \n",
             "_________________________________________________________________\n",
-            "activation_50 (Activation)   (None, 512)               0         \n",
+            "activation_62 (Activation)   (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dropout_44 (Dropout)         (None, 512)               0         \n",
+            "dropout_56 (Dropout)         (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_54 (Dense)             (None, 512)               262656    \n",
+            "dense_66 (Dense)             (None, 512)               262656    \n",
             "_________________________________________________________________\n",
-            "activation_51 (Activation)   (None, 512)               0         \n",
+            "activation_63 (Activation)   (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dropout_45 (Dropout)         (None, 512)               0         \n",
+            "dense_67 (Dense)             (None, 6)                 3078      \n",
             "_________________________________________________________________\n",
-            "dense_55 (Dense)             (None, 6)                 3078      \n",
-            "_________________________________________________________________\n",
-            "activation_52 (Activation)   (None, 6)                 0         \n",
+            "activation_64 (Activation)   (None, 6)                 0         \n",
             "=================================================================\n",
             "Total params: 6,174,214\n",
             "Trainable params: 6,174,214\n",
@@ -1385,7 +1382,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 564
         },
-        "outputId": "2510b031-bfae-4a39-db29-30ac599420b4"
+        "outputId": "9e6402aa-c55e-472a-c5d4-54e16e543a91"
       },
       "cell_type": "code",
       "source": [
@@ -1395,49 +1392,49 @@
         "                    verbose=1,\n",
         "                    validation_split=0.2)"
       ],
-      "execution_count": 181,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 646 samples, validate on 162 samples\n",
             "Epoch 1/15\n",
-            "646/646 [==============================] - 0s 620us/step - loss: 0.0091 - acc: 0.9985 - val_loss: 2.4514 - val_acc: 0.5370\n",
+            "646/646 [==============================] - 4s 6ms/step - loss: 0.8199 - acc: 0.6889 - val_loss: 4.2391 - val_acc: 0.0309\n",
             "Epoch 2/15\n",
-            "646/646 [==============================] - 0s 577us/step - loss: 8.8242e-04 - acc: 1.0000 - val_loss: 4.8284 - val_acc: 0.4444\n",
+            "646/646 [==============================] - 0s 620us/step - loss: 0.3885 - acc: 0.8762 - val_loss: 2.5786 - val_acc: 0.0802\n",
             "Epoch 3/15\n",
-            "646/646 [==============================] - 0s 550us/step - loss: 0.0115 - acc: 0.9969 - val_loss: 4.3043 - val_acc: 0.4321\n",
+            "646/646 [==============================] - 0s 613us/step - loss: 0.2496 - acc: 0.9149 - val_loss: 1.7607 - val_acc: 0.0864\n",
             "Epoch 4/15\n",
-            "646/646 [==============================] - 0s 553us/step - loss: 0.0463 - acc: 0.9954 - val_loss: 2.0262 - val_acc: 0.7654\n",
+            "646/646 [==============================] - 0s 591us/step - loss: 0.1625 - acc: 0.9412 - val_loss: 2.5060 - val_acc: 0.1049\n",
             "Epoch 5/15\n",
-            "646/646 [==============================] - 0s 539us/step - loss: 0.0020 - acc: 1.0000 - val_loss: 1.8743 - val_acc: 0.8025\n",
+            "646/646 [==============================] - 0s 589us/step - loss: 0.0871 - acc: 0.9721 - val_loss: 0.6664 - val_acc: 0.8272\n",
             "Epoch 6/15\n",
-            "646/646 [==============================] - 0s 521us/step - loss: 2.2656e-05 - acc: 1.0000 - val_loss: 1.7711 - val_acc: 0.8086\n",
+            "646/646 [==============================] - 0s 615us/step - loss: 0.1412 - acc: 0.9659 - val_loss: 1.3406 - val_acc: 0.4506\n",
             "Epoch 7/15\n",
-            "646/646 [==============================] - 0s 562us/step - loss: 3.3243e-05 - acc: 1.0000 - val_loss: 1.7641 - val_acc: 0.8086\n",
+            "646/646 [==============================] - 0s 592us/step - loss: 0.0890 - acc: 0.9675 - val_loss: 5.2496 - val_acc: 0.0864\n",
             "Epoch 8/15\n",
-            "646/646 [==============================] - 0s 578us/step - loss: 1.8395e-05 - acc: 1.0000 - val_loss: 1.7576 - val_acc: 0.8086\n",
+            "646/646 [==============================] - 0s 612us/step - loss: 0.0596 - acc: 0.9845 - val_loss: 2.2877 - val_acc: 0.4691\n",
             "Epoch 9/15\n",
-            "646/646 [==============================] - 0s 594us/step - loss: 7.5825e-04 - acc: 1.0000 - val_loss: 1.2284 - val_acc: 0.8086\n",
+            "646/646 [==============================] - 0s 578us/step - loss: 0.0112 - acc: 0.9985 - val_loss: 0.5729 - val_acc: 0.8272\n",
             "Epoch 10/15\n",
-            "646/646 [==============================] - 0s 565us/step - loss: 3.6070e-06 - acc: 1.0000 - val_loss: 1.1852 - val_acc: 0.8148\n",
+            "646/646 [==============================] - 0s 602us/step - loss: 6.4269e-04 - acc: 1.0000 - val_loss: 0.7884 - val_acc: 0.7531\n",
             "Epoch 11/15\n",
-            "646/646 [==============================] - 0s 574us/step - loss: 2.6536e-06 - acc: 1.0000 - val_loss: 1.1818 - val_acc: 0.8148\n",
+            "646/646 [==============================] - 0s 601us/step - loss: 0.0062 - acc: 0.9954 - val_loss: 1.3619 - val_acc: 0.6667\n",
             "Epoch 12/15\n",
-            "646/646 [==============================] - 0s 585us/step - loss: 1.0595e-05 - acc: 1.0000 - val_loss: 1.1831 - val_acc: 0.8148\n",
+            "646/646 [==============================] - 0s 576us/step - loss: 0.0056 - acc: 0.9985 - val_loss: 2.4146 - val_acc: 0.6420\n",
             "Epoch 13/15\n",
-            "646/646 [==============================] - 0s 603us/step - loss: 3.8726e-07 - acc: 1.0000 - val_loss: 1.1838 - val_acc: 0.8148\n",
+            "646/646 [==============================] - 0s 603us/step - loss: 0.1206 - acc: 0.9783 - val_loss: 2.7152 - val_acc: 0.5679\n",
             "Epoch 14/15\n",
-            "320/646 [=============>................] - ETA: 0s - loss: 3.4628e-06 - acc: 1.0000"
+            " 32/646 [>.............................] - ETA: 0s - loss: 0.0017 - acc: 1.0000"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "646/646 [==============================] - 0s 605us/step - loss: 2.2495e-06 - acc: 1.0000 - val_loss: 1.1843 - val_acc: 0.8148\n",
+            "646/646 [==============================] - 0s 586us/step - loss: 0.1192 - acc: 0.9783 - val_loss: 8.7521 - val_acc: 0.0617\n",
             "Epoch 15/15\n",
-            "646/646 [==============================] - 0s 563us/step - loss: 2.2499e-05 - acc: 1.0000 - val_loss: 1.1876 - val_acc: 0.8148\n"
+            "646/646 [==============================] - 0s 605us/step - loss: 0.1719 - acc: 0.9690 - val_loss: 0.6700 - val_acc: 0.8889\n"
           ],
           "name": "stdout"
         }
@@ -1461,7 +1458,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "01104a71-c7be-4d2b-d24a-3588e70d6323"
+        "outputId": "443d5071-b1ea-4258-bfcf-bf33e1927740"
       },
       "cell_type": "code",
       "source": [
@@ -1470,14 +1467,14 @@
         "print('Test score:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 182,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "208/208 [==============================] - 49s 237ms/step\n",
-            "Test score: 1.7978149927579439\n",
-            "Test accuracy: 0.08173076923076923\n"
+            "208/208 [==============================] - 10s 50ms/step\n",
+            "Test score: 2.1362342834472656\n",
+            "Test accuracy: 0.014423076923076924\n"
           ],
           "name": "stdout"
         }
@@ -1491,7 +1488,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "5c153ec7-0807-404c-f84f-6acac27555ca"
+        "outputId": "e1774de3-c73e-48c1-eea8-ba334592ed56"
       },
       "cell_type": "code",
       "source": [
@@ -1500,18 +1497,91 @@
         "print('Test score:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 185,
+      "execution_count": 197,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "208/208 [==============================] - 1s 7ms/step\n",
-            "Test score: 5.391679140237661\n",
-            "Test accuracy: 0.35096153846153844\n"
+            "208/208 [==============================] - 0s 189us/step\n",
+            "Test score: 3.211094856262207\n",
+            "Test accuracy: 0.34615384615384615\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "crjp_6xirw1Y",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Evaluation"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "FdbOe8uvr12Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "text_labels = encoder.classes_ \n",
+        "\n",
+        "for i in range(10):\n",
+        "    prediction = model.predict(np.array([x_test[i]]))\n",
+        "    predicted_label = text_labels[np.argmax(prediction)]\n",
+        "    print(test_posts.iloc[i][:50], \"...\")\n",
+        "    print('Actual label:' + test_tags.iloc[i])\n",
+        "    print(\"Predicted label: \" + predicted_label + \"\\n\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "BWYLiq3Gr4oY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "y_softmax = model.predict(x_test)\n",
+        "\n",
+        "y_test_1d = []\n",
+        "y_pred_1d = []\n",
+        "\n",
+        "for i in range(len(y_test)):\n",
+        "    probs = y_test[i]\n",
+        "    index_arr = np.nonzero(probs)\n",
+        "    one_hot_index = index_arr[0].item(0)\n",
+        "    y_test_1d.append(one_hot_index)\n",
+        "\n",
+        "for i in range(0, len(y_softmax)):\n",
+        "    probs = y_softmax[i]\n",
+        "    predicted_index = np.argmax(probs)\n",
+        "    y_pred_1d.append(predicted_index)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ur-UofB0r8VE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "cnf_matrix = confusion_matrix(y_test_1d, y_pred_1d)\n",
+        "plt.figure(figsize=(24,20))\n",
+        "plot_confusion_matrix(cnf_matrix, classes=text_labels, title=\"Confusion matrix\")\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
