added visualization of the models

--- a/openapi_classifier.ipynb
+++ b/openapi_classifier.ipynb
@@ -1244,6 +1244,20 @@
     },
     {
       "metadata": {
+        "id": "CUX2pTzajFYm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from keras.utils import plot_model\n",
+        "plot_model(model, to_file='model.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "V8Yt5meuCIpu",
         "colab_type": "code",
         "colab": {
@@ -1373,6 +1387,20 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "BmhQZZp6jAR4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from keras.utils import plot_model\n",
+        "plot_model(model, to_file='model2.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -1509,6 +1537,68 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "8WQ4F679hyLm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "loss_and_metrics = model.evaluate(x_test, y_test, batch_size=128)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9vfewUCch1Rt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "loss_and_metrics = model2.evaluate(x_test, y_test, batch_size=128)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "8f_DGORah3_e",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Use Model"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "7KJBPAjzh-MK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "classes = model.predict(x_test, batch_size=128)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "n09BxUwsiFsU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "classes2 = model2.predict(x_test, batch_size=128)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
