add adjustable learning rate

--- a/openapi_classifier.ipynb
+++ b/openapi_classifier.ipynb
@@ -1386,8 +1386,8 @@
       },
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
+        "learning_rate = 0.001\n",
+        "decay_rate = 0.0\n",
         "\n",
         "sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
         "embedded_sequences = embedding_layer(sequence_input)\n",
@@ -1415,9 +1415,11 @@
         "\n",
         "preds = Dense(32, activation='softmax')(x)\n",
         "\n",
+        "adam = Adam(lr=learning_rate, beta_1=0.9, beta_2=0.999, epsilon=None, decay=decay_rate, amsgrad=False)\n",
+        "\n",
         "model = Model(sequence_input, preds)\n",
         "model.compile(loss='categorical_crossentropy',\n",
-        "              optimizer='rmsprop',\n",
+        "              optimizer = adam,\n",
         "              metrics=['acc'])"
       ],
       "execution_count": 0,
@@ -2087,6 +2089,9 @@
         "from keras.models import Sequential\n",
         "from keras.layers import *\n",
         "\n",
+        "learning_rate = 0.001\n",
+        "decay_rate = 0.0\n",
+        "\n",
         "sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
         "embedded_sequences = embedding_layer(sequence_input)\n",
         "\n",
@@ -2103,7 +2108,10 @@
         "model_lstm.add(BatchNormalization())\n",
         "\n",
         "model_lstm.add(Dense(32, activation='softmax'))\n",
-        "model_lstm.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "\n",
+        "rmsprop = RMSprop(lr=learning_rate, rho=0.9, epsilon=None, decay=decay_rate)\n",
+        "\n",
+        "model_lstm.compile(loss='categorical_crossentropy', optimizer=rmsprop, metrics=['accuracy'])\n",
         "\n",
         "model_lstm.summary()"
       ],
